updated parser to handle Prusa properly and fixed some bad includes and evalScope issues

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <body>
     <div class="lines"></div>
     <div class="container" id="body">
+        <div id="visualiser"></div>
+
         <!-- <div class="row">
                         <div class="col-md-3"><a href="http://github.com/pixelpusher/liveprinter"><em>The Printer Jam</em></a></div>
                         <div class="col-md-9" id="header"></div>
@@ -230,13 +232,9 @@
                             </div>
                         </div>
 
-                        <div id="visualiser-area" class="tab-pane fade show" role="tabpanel" aria-labelledby="pills-editor-tab">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div id="visualiser"></div>
-                                </div>
-                            </div>
-                        </div>
+                        <!-- <div id="visualiser-area" class="tab-pane fade show" role="tabpanel" aria-labelledby="pills-editor-tab">
+                            <div id="visualiser"></div>
+                        </div> -->
                         <!-- session code editor -->
                         <div id="code-editor-area" class="tab-pane fade show" role="tabpanel" aria-labelledby="pills-editor-tab">
                             <div class="row">
