refactor bitty; update gridlib to iterators and array next funcs; sound refactor

--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LP Test</title>
-    <script src="./node_modules/bitty-editor/bitty.min.js" defer></script>
-    <script
-      src="./node_modules/bitty-editor/plugins/highlight_active_line.js"
-      defer
-    ></script>
+    <title>LivePrinter2 Simulator</title>
     <style>
       .bitty-editor {
         position: absolute;
