fixes after May 19 gig to iterator code

--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
   <body>
     <div class="lines"></div>
     <div class="container" id="body">
-      <div id="visualiser"></div>
+      <div id="row">
+        <div id="col-10"><div id="visualiser"></div></div>
+      </div>
+      
 
       <!-- <div class="row">
                         <div class="col-md-3"><a href="http://github.com/pixelpusher/liveprinter"><em>The Printer Jam</em></a></div>
                         <div class="col-md-9" id="header"></div>
         </div> -->
       <div class="row">
-        <div class="col-9 col-md-8" id="printer-editor-col">
+        <div class="col-10 col-md-9" id="printer-editor-col">
           <div class="box bg-colorful1 fullheight">
             <ul
               id="editor-settings-nav"
@@ -455,7 +458,7 @@
                     </button>
                   </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                   <div class="col-md-3">
                     <button
                       id="temp-display-btn"
@@ -474,9 +477,10 @@
                       Display ajax requests
                     </button>
                   </div>
-                </div>
+                </div> -->
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-4">
+                    <div class="col-md-3">
                     <button
                       id="refresh-serial-ports-btn"
                       class="btn btn-sm btn-primary"
@@ -485,7 +489,6 @@
                       Refresh Ports
                     </button>
                   </div>
-                  <div class="col-md-4">
                     <div class="btn-group">
                       <button
                         type="button"
@@ -601,7 +604,7 @@
                 </div>
               </div>
 
-              <!-- history code editor-->
+              <!--  code editor 2-->
               <div
                 id="code-editor-2-area"
                 class="tab-pane fade show active hideAfterLoad"
@@ -609,10 +612,10 @@
                 aria-labelledby="pills-editor-2-tab"
               >
                 <div class="row">
-                  <div class="col-12 cm-contain">
+                  <div class="col-12">
                     <div
                       id="code-editor-2"
-                      class="bitty-editor one"
+                      class="bitty-editor"
                       contenteditable="true"
                       spellcheck="false"
                     ></div>
@@ -739,7 +742,7 @@
           <div class="panel-b-l"></div>
         </div>
 
-        <div class="col-3 col-md-4">
+        <div class="col-2 col-md-3">
           <div id="inbox" class="box">
             <div style="position: relative; height: 100%">
               <ul
@@ -762,7 +765,7 @@
                 <li class="flex-sm-fill text-sm-center nav-item">
                   <a
                     class="nav-link"
-                    id="errors-tab"
+                    id="errors-tab hidden"
                     data-toggle="pill"
                     href="#errors"
                     role="tab"
@@ -773,15 +776,43 @@
                 </li>
                 <li class="flex-sm-fill text-sm-center nav-item">
                   <a
-                    class="nav-link"
+                    class="nav-link hidden"
                     id="commands-tab"
                     data-toggle="pill"
                     href="#commands"
                     role="tab"
-                    aria-controls="commands"
+                    aria-controls="errors"
                     aria-selected="false"
                     >commands</a
                   >
+                </li>
+                <li class="flex-sm-fill text-sm-center nav-item dropdown">
+                   <a
+                    class="nav-link dropdown-toggle"
+                    data-toggle="dropdown"
+                    href="#"
+                    role="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Output:</a
+                  >
+                  <div class="dropdown-menu">
+                    <a
+                      class="dropdown-item flex-sm-fill text-sm-left"
+                      href="#"
+                      >Commands</a
+                    >
+                    <a
+                      class="dropdown-item flex-sm-fill text-sm-left"
+                      href="#"                  
+                      >Errors</a
+                    >
+                    <a
+                      class="dropdown-item flex-sm-fill text-sm-left"
+                      href="#"
+                      >Info</a
+                    >
+                  </div>
                 </li>
                 <li class="flex-sm-fill text-sm-center nav-item dropdown">
                   <a
