--- a/index.html
+++ b/index.html
@@ -929,6 +929,10 @@
                       "
                     ></div>
                   </div>
+                  <div id="progress">
+                    <p><em>SHAPE</em><span id='shape-progress'></span></p>
+                    <p><em>TIMELINE</em><span id='timeline-progress'></span></p>
+                  </div>
 
                   <ul></ul>
                 </div>
