gui errors ahead of ICLC, over try/catch-ing

--- a/index.html
+++ b/index.html
@@ -930,8 +930,8 @@
                     ></div>
                   </div>
                   <div id="progress">
-                    <p><em>SHAPE</em><span id='shape-progress'></span></p>
-                    <p><em>TIMELINE</em><span id='timeline-progress'></span></p>
+                    <p><em>SHAPE</em><span id='shape-progress' class="'prog-bar"></span></p>
+                    <p><em>TIMELINE</em><span id='timeline-progress' class="'prog-bar"></span></p>
                   </div>
 
                   <ul></ul>
