--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       <div id="row">
         <div id="col-10"><div id="visualiser"></div></div>
       </div>
-      
 
       <!-- <div class="row">
                         <div class="col-md-3"><a href="http://github.com/pixelpusher/liveprinter"><em>The Printer Jam</em></a></div>
@@ -493,14 +492,14 @@
                 <div class="row">
                   <div class="col-md-4">
                     <div class="col-md-3">
-                    <button
-                      id="refresh-serial-ports-btn"
-                      class="btn btn-sm btn-primary"
-                      type="button"
-                    >
-                      Refresh Ports
-                    </button>
-                  </div>
+                      <button
+                        id="refresh-serial-ports-btn"
+                        class="btn btn-sm btn-primary"
+                        type="button"
+                      >
+                        Refresh Ports
+                      </button>
+                    </div>
                     <div class="btn-group">
                       <button
                         type="button"
@@ -585,7 +584,7 @@
               >
                 <div class="row">
                   <div class="col-md-12">
-                    <div id="modal-errors"></div>
+                    <div class="modal-errors"></div>
                     <div
                       id="code-editor"
                       class="bitty-editor"
@@ -624,7 +623,8 @@
                 aria-labelledby="pills-editor-2-tab"
               >
                 <div class="row">
-                  <div class="col-12">
+                  <div class="col-md-12">
+                    <div class="modal-errors"></div>
                     <div
                       id="code-editor-2"
                       class="bitty-editor"
@@ -669,7 +669,8 @@
                 aria-labelledby="pills-editor-3-tab"
               >
                 <div class="row">
-                  <div class="col-12">
+                  <div class="col-md-12">
+                    <div class="modal-errors"></div>
                     <div
                       id="code-editor-3"
                       class="bitty-editor"
@@ -714,7 +715,8 @@
                 aria-labelledby="pills-history-editor-tab"
               >
                 <div class="row">
-                  <div class="col-12 cm-contain">
+                  <div class="col-md-12">
+                    <div class="modal-errors"></div>
                     <div
                       id="history-code-editor"
                       class="bitty-editor one"
@@ -760,7 +762,8 @@
                 aria-labelledby="pills-gcode-editor-tab"
               >
                 <div class="row">
-                  <div class="col-12 cm-contain">
+                  <div class="col-md-12">
+                    <div class="modal-errors"></div>
                     <div
                       id="gcode-editor"
                       class="bitty-editor one"
@@ -844,7 +847,7 @@
                   >
                 </li>
                 <li class="flex-sm-fill text-sm-center nav-item dropdown">
-                   <a
+                  <a
                     class="nav-link dropdown-toggle"
                     data-toggle="dropdown"
                     href="#"
@@ -854,19 +857,13 @@
                     >Output:</a
                   >
                   <div class="dropdown-menu">
-                    <a
-                      class="dropdown-item flex-sm-fill text-sm-left"
-                      href="#"
+                    <a class="dropdown-item flex-sm-fill text-sm-left" href="#"
                       >Commands</a
                     >
-                    <a
-                      class="dropdown-item flex-sm-fill text-sm-left"
-                      href="#"                  
+                    <a class="dropdown-item flex-sm-fill text-sm-left" href="#"
                       >Errors</a
                     >
-                    <a
-                      class="dropdown-item flex-sm-fill text-sm-left"
-                      href="#"
+                    <a class="dropdown-item flex-sm-fill text-sm-left" href="#"
                       >Info</a
                     >
                   </div>
@@ -930,8 +927,14 @@
                     ></div>
                   </div>
                   <div id="progress">
-                    <p><em>SHAPE</em><span id='shape-progress' class="'prog-bar"></span></p>
-                    <p><em>TIMELINE</em><span id='timeline-progress' class="'prog-bar"></span></p>
+                    <p>
+                      <em>SHAPE</em
+                      ><span id="shape-progress" class="'prog-bar"></span>
+                    </p>
+                    <p>
+                      <em>TIMELINE</em
+                      ><span id="timeline-progress" class="'prog-bar"></span>
+                    </p>
                   </div>
 
                   <ul></ul>
